# service/api/api-handler.go
@@ -6,12 +6,21 @@ import (
 
 // Handler returns an instance of httprouter.Router that handle APIs registered here
 func (rt *_router) Handler() http.Handler {
-	// Register routes
-	rt.router.GET("/", rt.getHelloWorld)
-	rt.router.GET("/context", rt.wrap(rt.getContextReply))
-
-	// Special routes
+	rt.router.POST("/session", rt.wrap(rt.doLogin))
+	rt.router.PUT("/user/:username/setusername", rt.wrap(rt.setMyUserName))
+	rt.router.GET("/user/:username/stream", rt.wrap(rt.getMyStream))
+	rt.router.GET("/users/:username/profile", rt.wrap(rt.getUserProfile))
+	rt.router.PUT("/users/:username/photo/:photoid", rt.wrap(rt.uploadPhoto))
+	rt.router.DELETE("/users/:username/photo/:photoid", rt.wrap(rt.deletePhoto))
+	rt.router.GET("/users/:username/photo", rt.wrap(rt.getUserPhotos))
+	rt.router.PUT("/users/:username/ban/:banid", rt.wrap(rt.banUser))
+	rt.router.DELETE("/users/:username/ban/:banid", rt.wrap(rt.unbanUser))
+	rt.router.PUT("/users/:username/follow/:followid", rt.wrap(rt.followUser))
+	rt.router.DELETE("/users/:username/follow/:followid", rt.wrap(rt.unfollowUser))
+	rt.router.PUT("/users/:username/photo/:photoid/like/:likeid", rt.wrap(rt.likePhoto))
+	rt.router.DELETE("/users/:username/photo/:photoid/like/:likeid", rt.wrap(rt.unlikePhoto))
+	rt.router.PUT("/users/:username/photo/:photoid/comment/:commentid", rt.wrap(rt.commentPhoto))
+	rt.router.DELETE("/users/:username/photo/:photoid/comment/:commentid", rt.wrap(rt.uncommentPhoto))
 	rt.router.GET("/liveness", rt.liveness)
-
 	return rt.router
 }
