# service/api/user.go
@@ -10,8 +10,8 @@ import (
 )
 
 func (rt *_router) getMyStream(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
-	w.Header().set("Content-Type", "application/json")
-	identifier := extractBearer(r.Header.Get("Authorization")) //prendiamo id utente
+	w.Header().Set("Content-Type", "application/json")
+	identifier := extractBearer(r.Header.Get("Authorization"))
 	valid := validateRequestingUser(ps.ByName("id"), identifier)
 	if valid != 0 {
 		w.WriteHeader(valid)
@@ -25,7 +25,7 @@ func (rt *_router) getMyStream(w http.ResponseWriter, r *http.Request, ps httpro
 	var photos []database.Photo
 	for _, follower := range followers {
 		followerPhoto, err := rt.db.GetPhotosList(
-			User{IdUserd: identifier}.ToDatabase(),
+			User{IdUser: identifier}.ToDatabase(),
 			User{IdUser: follower.IdUser}.ToDatabase())
 		if err != nil {
 			w.WriteHeader(http.StatusInternalServerError)
@@ -38,7 +38,7 @@ func (rt *_router) getMyStream(w http.ResponseWriter, r *http.Request, ps httpro
 			photos = append(photos, photo)
 		}
 	}
-	w.WriteHeader(http.StatusOk)
+	w.WriteHeader(http.StatusOK)
 
 	_ = json.NewEncoder(w).Encode(photos)
 
@@ -46,13 +46,13 @@ func (rt *_router) getMyStream(w http.ResponseWriter, r *http.Request, ps httpro
 
 func (rt *_router) getUserProfile(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
 	requestingUserId := extractBearer(r.Header.Get("Authorization"))
-	requestesUser := ps.ByName("id")
+	requestedUser := ps.ByName("id")
 
 	var followers []database.User
 	var following []database.User
 	var photos []database.Photo
 
-	userBanned, err := rt.db.BannedUserCheck(User{UserId: requestingUserId}.ToDatabase(), User{UserId: requestedUser}.ToDatabase)
+	userBanned, err := rt.db.BannedUserCheck(User{IdUser: requestingUserId}.ToDatabase(), User{IdUser: requestedUser}.ToDatabase())
 	if err != nil {
 		ctx.Logger.WithError(err).Error("getUserProfile/db.BannedUserCheck/userBanned: error executing query")
 		w.WriteHeader(http.StatusInternalServerError)
@@ -106,7 +106,7 @@ func (rt *_router) getUserProfile(w http.ResponseWriter, r *http.Request, ps htt
 		return
 	}
 
-	nickname, err := rt.db.GetUsername(User{IdUser: requestedUser}.ToDatabase())
+	username, err := rt.db.GetUsername(User{IdUser: requestedUser}.ToDatabase())
 	if err != nil {
 		ctx.Logger.WithError(err).Error("getUserProfile/db.GetNickname: error executing query")
 		w.WriteHeader(http.StatusInternalServerError)
@@ -114,9 +114,9 @@ func (rt *_router) getUserProfile(w http.ResponseWriter, r *http.Request, ps htt
 	}
 
 	w.WriteHeader(http.StatusOK)
-	_ = json.NewEncoder(w).Encode(CompleteProfile{
+	_ = json.NewEncoder(w).Encode(Profile{
 		Name:      requestedUser,
-		Nickname:  nickname,
+		Username:  username,
 		Followers: followers,
 		Following: following,
 		Posts:     photos,
@@ -125,14 +125,14 @@ func (rt *_router) getUserProfile(w http.ResponseWriter, r *http.Request, ps htt
 }
 
 func (rt *_router) getUsersQuery(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
-	w.Header().set("Content-Type", "application/json")
+	w.Header().Set("Content-Type", "application/json")
 	identifier := extractBearer(r.Header.Get("Authorization"))
 	if identifier == "" {
 		w.WriteHeader(http.StatusForbidden)
 		return
 	}
-	identificator := r.Url.Query().Get("id")
-	res, err := rt.db.SearchUser(User{UserId: identifier}.ToDatabase(), User{UserId: identificator}.ToDatabase())
+	identificator := r.URL.Query().Get("id")
+	res, err := rt.db.SearchUser(User{IdUser: identifier}.ToDatabase(), User{IdUser: identificator}.ToDatabase())
 	if err != nil {
 		w.WriteHeader(http.StatusInternalServerError)
 		ctx.Logger.WithError(err).Error("Database has encountered an error")
@@ -148,14 +148,14 @@ func (rt *_router) getUsersQuery(w http.ResponseWriter, r *http.Request, ps http
 
 }
 
-func (rt *_router) setMyUsername(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
+func (rt *_router) setMyUserName(w http.ResponseWriter, r *http.Request, ps httprouter.Params, ctx reqcontext.RequestContext) {
 	pathId := ps.ByName("id")
 	valid := validateRequestingUser(pathId, extractBearer(r.Header.Get("Authorization")))
 	if valid != 0 {
 		w.WriteHeader(valid)
 		return
 	}
-	var Username newUsername
+	var Username Username
 	err := json.NewDecoder(r.Body).Decode(&Username)
 	if err != nil {
 		ctx.Logger.WithError(err).Error("update-nickname: error decoding json")
@@ -164,7 +164,7 @@ func (rt *_router) setMyUsername(w http.ResponseWriter, r *http.Request, ps http
 	}
 	err = rt.db.ModifyUsername(
 		User{IdUser: pathId}.ToDatabase(),
-		nick.ToDatabase())
+		Username.ToDatabase())
 	if err != nil {
 		ctx.Logger.WithError(err).Error("update-nickname: error executing update query")
 		w.WriteHeader(http.StatusInternalServerError)
